--- a/src/pages/PostureAnalysis.css
+++ b/src/pages/PostureAnalysis.css
@@ -1,5 +1,26 @@
-.analysis-container {
-    text-align: center;
-    padding: 50px;
-  }
-  
+.posture-analysis-container {
+  text-align: center;
+  padding: 20px;
+}
+
+.analyze-btn {
+  padding: 12px 18px;
+  font-size: 18px;
+  cursor: pointer;
+  background-color:#d1b079;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-top: 15px;
+}
+
+.analyze-btn:hover {
+  background-color: #d1b079;
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #62360b;
+}
